feat(auth): implement Sign Up with Firebase (#4)