@@ -13,7 +13,6 @@
     <artifactId>eticketia-backend-parent</artifactId>
     <version>${revision}</version>
     <packaging>pom</packaging>
-    <name>Eticketia Parent</name>
     <description>Parent module with dependencies and common project configuration</description>
     <inceptionYear>2025</inceptionYear>
     
@@ -63,7 +62,6 @@
         <spring-boot-starter-web>${spring-boot-starter}</spring-boot-starter-web>
         <spring-boot-testcontainers>${spring-boot-starter}</spring-boot-testcontainers>
         <spring-security-test>6.4.4</spring-security-test>
-        <lombok>1.18.38</lombok>
         <jacoco>0.8.13</jacoco>
         <testng>7.10.0</testng>
         <checkstyle>10.25.0</checkstyle>
@@ -95,7 +93,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok}</version>
+            <version>${lombok.version}</version>
             <scope>compile</scope>
         </dependency>
         
@@ -146,6 +144,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring-boot-starter-web}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>${spring-boot-starter-data-jpa}</version>
+        </dependency>
         
         <!-- Serialization -->
         <dependency>
@@ -159,6 +162,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-parameter-names</artifactId>
+        </dependency>
+        
+        <!-- Apache utils -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
     
@@ -281,14 +290,11 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
-                    <compilerArgs>
-                        <arg>-proc:full</arg>
-                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>${lombok}</version>
+                            <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
@@ -332,33 +338,6 @@
                 <maven.test.skip>true</maven.test.skip>
             </properties>
         
-        </profile>
-        
-        <!-- Testing profile: test  -->
-        <profile>
-            <id>testing</id>
-            <properties>
-                <!-- Read configuration from application-test.yaml -->
-                <activatedProperties>test</activatedProperties>
-                <maven.test.skip>false</maven.test.skip>
-            </properties>
-            
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.jacoco</groupId>
-                        <artifactId>jacoco-maven-plugin</artifactId>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
         
         <!-- Production profile: prod -->
